--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <h1>Welcome to Web Development</h1>
+    <a href="./kanbas/home.html">Assignment 1</a>
+    <a href="">Assignment 2</a>
+    <a href="">Assignment 3</a>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
