--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Edit Profile</title>
+    <title>A1 - Edit Profile</title>
   </head>
   <body>
     <table border="0" width="100%">
