added correct navigation between links

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <h1>Welcome to Web Development</h1>
-    <a href="./kanbas/home.html">Assignment 1</a>
+    <a href="./kanbas/index.html">Assignment 1</a>
     <a href="">Assignment 2</a>
     <a href="">Assignment 3</a>
     <div id="root"></div>
