--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -9,9 +9,9 @@
       <tbody>
         <tr valign="baseline">
           <td>
-            <li><a href="#">Account</a></li>
+            <li><a href="../account.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Courses</a></li>
+            <li><a href="../courses.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -136,8 +136,10 @@
             <input type="date" value="2023-01-01" />
             <br />
             <br />
-            <button type="button"><a href="./index.html">Cancel</a></button>
-            <button type="button"><a href="./index.html">Save</a></button>
+            <form action="index.html">
+              <button>Cancel</button>
+              <button>Save</button>
+            </form>
           </td>
         </tr>
       </tbody>
