--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -9,9 +9,9 @@
       <tbody>
         <tr valign="baseline">
           <td>
-            <li><a href="#">Account</a></li>
+            <li><a href="../account.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Courses</a></li>
+            <li><a href="../courses.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
