--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -9,9 +9,9 @@
       <tbody>
         <tr valign="baseline">
           <td>
-            <li><a href="#">Account</a></li>
+            <li><a href="./account.html">Account</a></li>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Courses</a></li>
+            <li><a href="./courses.html">Courses</a></li>
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Inbox</a></li>
             <li><a href="#">History</a></li>
@@ -20,7 +20,7 @@
             <li><a href="#">Help</a></li>
           </td>
           <td>
-            <li><a href="#">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="#">Modules</a></li>
             <li><a href="#">Piazza</a></li>
             <li><a href="#">Zoom Meetings</a></li>
