--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -74,13 +74,10 @@ Faculty, Software Engineer, AI, Space, and renewables enthusiast.</textarea
                     <br />
                     <button type="button">Add another link</button>
                     <br />
-                    <button type="button">
-                      <a href="./index.html">Cancel</a>
-                    </button>
-                    <button type="button">
-                      <a href="./index.html">Save</a>
-                    </button>
-                    <br />
+                    <form action="index.html">
+                      <button>Cancel</button>
+                      <button>Save Profile</button>
+                    </form>
                     <button type="button">Edit Profile</button>
                     <button type="button">Cancel Profile</button>
                   </td>
