--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -40,9 +40,9 @@
                     <h2>Alexander Kaufmann</h2>
                   </td>
                   <td>
-                    <button type="button">
-                      <a href="./edit.html">Edit Profile</a>
-                    </button>
+                    <form action="edit.html">
+                      <button>Edit Profile</button>
+                    </form>
                   </td>
                 </tr>
               </tbody>
