--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
     <h1>Welcome to Web Development</h1>
     <a href="./kanbas/index.html">Assignment 1</a>
+    <a href="./labs/a1/index.html">Lab 1</a>
     <a href="">Assignment 2</a>
     <a href="">Assignment 3</a>
     <div id="root"></div>
