--- a/public/kanbas/dashboard.html
+++ b/public/kanbas/dashboard.html
@@ -88,17 +88,79 @@
       <div class="d-flex flex-column" style="width: 100%">
         <h1>Dashboard</h1>
         <hr />
-        <h2>Published Courses (24)</h2>
-        <hr />
-        <div class="container">
+        <div class="container-fluid">
+          <h2>Published Courses (24)</h2>
+          <hr />
           <div class="row">
             <div class="col-12 col-md-4 col-xl-3" style="border-radius: 10px">
-              <div class="card" style="width: 18rem">
+              <div class="card mb-3" style="width: 300px">
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 18rem;
+                    height: 160px;
+                    border-radius: 5px;
+                    width: 300px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
+                <div class="card-body">
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
+                  </p>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3">
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    height: 160px;
+                    border-radius: 5px;
+                    width: 300px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
+                <div class="card-body">
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
+                  </p>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4 col-xl-3">
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
                   "
@@ -109,103 +171,172 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
+                    height: 160px;
+                    border-radius: 5px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
+                    height: 160px;
+                    border-radius: 5px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
+                    height: 160px;
+                    border-radius: 5px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
+                    height: 160px;
+                    border-radius: 5px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
+                  </p>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="card mb-3" style="width: 300px">
+                <div
+                  class="d-flex justify-content-end"
+                  style="
+                    background-color: darkcyan;
+                    width: 300px;
+                    height: 160px;
+                    border-radius: 5px;
+                  "
+                >
+                  <i
+                    class="fa-solid fa-braille"
+                    style="margin-top: 10px; margin-right: 10px; color: white"
+                  ></i>
                 </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <p
+                    class="card-title"
+                    style="color: darkblue; font-weight: bold"
+                  >
+                    CS4550 12631 Web Development
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card" style="width: 18rem">
-                <img src="..." class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                  <h5 class="card-text" style="color: grey">CS4550.12631</h5>
+                  <p class="card-text" style="font-size: 0.9em; color: grey">
+                    202410_1 Fall 2023 Semester Full Term
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <i class="fa-regular fa-pen-to-square"></i>
                 </div>
               </div>
             </div>
