--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -160,7 +160,7 @@
                 >Faculty, Software Engineer, AI, Space, and renewables
                 enthusiast.</label
               ><br />
-              <textarea rows="2" cols="50">
+              <textarea rows="2" cols="50" class="form-control">
 Faculty, Software Engineer, AI, Space, and renewables enthusiast.</textarea
               >
               <h3>Links</h3>
