--- a/public/kanbas/index.html
+++ b/public/kanbas/index.html
@@ -31,7 +31,7 @@
         class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
       >
         <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
-        <a class="kanbas-nav-a" href="./account.html">Account</a>
+        <a class="kanbas-nav-a" href="/kanbas/profile/index.html">Account</a>
       </li>
       <li
         class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
