--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -32,7 +32,10 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
         >
           <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
-          <a class="kanbas-nav-a" href="../account.html" style="color: red"
+          <a
+            class="kanbas-nav-a"
+            href="/kanbas/profile/index.html"
+            style="color: red"
             >Account</a
           >
         </li>
@@ -40,13 +43,13 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="../dashboard.html">Dashboard</a>
+          <a class="kanbas-nav-a" href="/kanbas/dashboard.html">Dashboard</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-solid fa-book fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="../courses.html">Courses</a>
+          <a class="kanbas-nav-a" href="/kanbas/courses.html">Courses</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
@@ -95,7 +98,7 @@
           <p style="margin-top: 15px">Alexander Kaufmann's Profile</p>
         </div>
         <hr />
-        <div class="d-flex">
+        <div class="d-flex" style="margin-top: 30px">
           <ul class="list-group" style="width: 160px">
             <li class="list-group-item">
               <a class="account-nav-a" href="#">Notifications</a>
@@ -159,7 +162,10 @@
               </div>
             </div>
             <form action="edit.html">
-              <button class="btn btn-secondary">Edit Profile</button>
+              <button class="btn btn-secondary">
+                <i class="fa-solid fa-pen" style="margin-right: 5px"></i>Edit
+                Profile
+              </button>
             </form>
           </div>
         </div>
