--- a/public/kanbas/dashboard.html
+++ b/public/kanbas/dashboard.html
@@ -32,13 +32,16 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
-          <a class="kanbas-nav-a" href="./account.html">Account</a>
+          <a class="kanbas-nav-a" href="/kanbas/profile/index.html">Account</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
         >
           <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="./dashboard.html" style="color: red"
+          <a
+            class="kanbas-nav-a"
+            href="/kanbas/dashboard.html"
+            style="color: red"
             >Dashboard</a
           >
         </li>
@@ -46,7 +49,7 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-solid fa-book fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="./courses.html">Courses</a>
+          <a class="kanbas-nav-a" href="/kanbas/courses.html">Courses</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
@@ -92,15 +95,18 @@
           <h2>Published Courses (24)</h2>
           <hr />
           <div class="row">
-            <div class="col-12 col-md-4 col-xl-3" style="border-radius: 10px">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3" style="border-radius: 10px">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
                     height: 160px;
                     border-radius: 5px;
-                    width: 300px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -109,12 +115,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -123,15 +134,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
                     height: 160px;
                     border-radius: 5px;
-                    width: 300px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -140,12 +154,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -154,15 +173,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -171,12 +193,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -185,15 +212,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -202,12 +232,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -216,15 +251,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -233,12 +271,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -247,15 +290,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -264,12 +310,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -278,15 +329,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -295,12 +349,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
@@ -309,15 +368,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-4 col-xl-3">
-              <div class="card mb-3" style="width: 300px">
+            <div class="col-sm-6 col-md-4 col-xl-3">
+              <div
+                class="card"
+                style="width: 270px; margin-bottom: 35px; margin-top: 35px"
+              >
                 <div
                   class="d-flex justify-content-end"
                   style="
                     background-color: darkcyan;
-                    width: 300px;
                     height: 160px;
                     border-radius: 5px;
+                    width: 270px;
                   "
                 >
                   <i
@@ -326,12 +388,17 @@
                   ></i>
                 </div>
                 <div class="card-body">
-                  <p
+                  <a
                     class="card-title"
-                    style="color: darkblue; font-weight: bold"
+                    style="
+                      color: darkblue;
+                      font-weight: bold;
+                      text-decoration: none;
+                    "
+                    href="/kanbas/courses.html"
                   >
                     CS4550 12631 Web Development
-                  </p>
+                  </a>
                   <h5 class="card-text" style="color: grey">CS4550.12631</h5>
                   <p class="card-text" style="font-size: 0.9em; color: grey">
                     202410_1 Fall 2023 Semester Full Term
