--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -32,7 +32,10 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center active"
         >
           <i class="fa-regular fa-user fa-2x" style="color: grey"></i>
-          <a class="kanbas-nav-a" href="../account.html" style="color: red"
+          <a
+            class="kanbas-nav-a"
+            href="/kanbas/profile/index.html"
+            style="color: red"
             >Account</a
           >
         </li>
@@ -40,13 +43,13 @@
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-solid fa-gauge fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="../dashboard.html">Dashboard</a>
+          <a class="kanbas-nav-a" href="/kanbas/dashboard.html">Dashboard</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
         >
           <i class="fa-solid fa-book fa-2x" style="color: red"></i>
-          <a class="kanbas-nav-a" href="../courses.html">Courses</a>
+          <a class="kanbas-nav-a" href="/kanbas/courses.html">Courses</a>
         </li>
         <li
           class="list-group-item kanbas-nav d-flex flex-column justify-content-center align-items-center"
@@ -95,7 +98,7 @@
           <p style="margin-top: 15px">Alexander Kaufmann's Profile</p>
         </div>
         <hr />
-        <div class="d-flex">
+        <div class="d-flex" style="margin-top: 30px">
           <ul class="list-group" style="width: 160px">
             <li class="list-group-item">
               <a class="account-nav-a" href="#">Notifications</a>
@@ -141,19 +144,25 @@
           <div class="d-flex">
             <div class="d-flex flex-column" style="width: 350px">
               <i class="fa-regular fa-user fa-6x"></i>
-              <h3>Alexander Kaufmann</h3>
-              <label>Name:*</label>
-              <input type="text" value="Alexander Kaufmann" />
-              <label>Pronouns</label>
-              <select>
+              <label style="font-weight: bold">Name:*</label>
+              <input
+                type="text"
+                class="form-control"
+                value="Alexander Kaufmann"
+              />
+              <label style="font-weight: bold">Pronouns:</label>
+              <select class="form-control">
                 <option value="#">None</option>
               </select>
-              <label>Title:</label>
-              <input type="text" />
-              <h3>Contact</h3>
+              <label style="font-weight: bold">Title:</label>
+              <input type="text" class="form-control" />
+              <h3 style="margin-top: 20px">Contact</h3>
               <p>
                 No registered services, you can add some on the
-                <a href="#">settings</a> page.
+                <a href="#" style="text-decoration: none; color: red"
+                  >settings</a
+                >
+                page.
               </p>
               <h3>Biography</h3>
               <label
@@ -164,33 +173,62 @@
 Faculty, Software Engineer, AI, Space, and renewables enthusiast.</textarea
               >
               <h3>Links</h3>
-              <div class="d-flex flex-column">
-                <div class="d-flex">
-                  <p>Title</p>
-                  <p>URL</p>
+              <div class="container">
+                <div class="row">
+                  <div class="col d-flex justify-content-center">
+                    <a style="font-weight: bold">Title</a>
+                  </div>
+                  <div class="col d-flex justify-content-center">
+                    <a style="font-weight: bold">URL</a>
+                  </div>
                 </div>
-                <div class="d-flex align-items-center" style="gap: 5px">
-                  <input type="text" value="YouTube" style="width: 100px" />
-                  <i class="fa-solid fa-arrow-right"></i>
-                  <input
-                    type="text"
-                    value="https://www.youtube.com/"
-                    style="width: 150px"
-                  />
-                  <i class="fa-solid fa-x" style="color: red"></i>
+                <div class="row">
+                  <div class="col">
+                    <input type="text" value="YouTube" style="width: 130px" />
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </div>
+                  <div class="col">
+                    <input
+                      type="text"
+                      value="https://www.youtube.com/"
+                      style="width: 125px"
+                    />
+                    <i class="fa-solid fa-x" style="color: red"></i>
+                  </div>
                 </div>
-                <button class="btn btn-secondary" style="width: 150px">
-                  Add another link
-                </button>
-                <hr />
-                <form action="index.html" style="align-self: end">
-                  <button class="btn btn-secondary">Cancel</button>
-                  <button class="btn btn-danger">Save Profile</button>
-                </form>
+                <div class="row" style="margin-bottom: 20px">
+                  <div class="col">
+                    <button
+                      class="btn btn-secondary"
+                      style="width: 150px; margin-top: 5px"
+                    >
+                      Add another link
+                    </button>
+                  </div>
+                </div>
+                <div class="row">
+                  <hr />
+                </div>
+                <div class="row d-flex" style="margin-top: 10px">
+                  <form action="index.html">
+                    <button class="btn btn-danger float-end">
+                      Save Profile
+                    </button>
+                    <button
+                      class="btn btn-secondary float-end"
+                      style="margin-right: 5px"
+                    >
+                      Cancel
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
-            <form action="edit.html">
-              <button class="btn btn-secondary">Edit Profile</button>
+            <form action="index.html">
+              <button class="btn btn-secondary">
+                <i class="fa-solid fa-pen" style="margin-right: 5px"></i>Cancel
+                Editing
+              </button>
             </form>
           </div>
         </div>
