--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,12 @@
     <h1>Welcome to Web Development</h1>
     <a href="./kanbas/index.html">Assignment 1</a>
     <a href="./labs/a1/index.html">Lab 1</a>
-    <a href="">Assignment 2</a>
+    <a href="https://a2--subtle-centaur-640973.netlify.app/kanbas/"
+      >Assignment 2</a
+    >
+    <a href="https://a2--subtle-centaur-640973.netlify.app/labs/a2/index.html"
+      >Lab 1</a
+    >
     <a href="">Assignment 3</a>
     <div id="root"></div>
 
