--- a/public/index.html
+++ b/public/index.html
@@ -25,20 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      src="https://kit.fontawesome.com/9cc191a4a4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <h1>Welcome to Web Development</h1>
-    <a href="./kanbas/index.html">Assignment 1</a>
-    <a href="./labs/a1/index.html">Lab 1</a>
-    <a href="https://a2--subtle-centaur-640973.netlify.app/kanbas/"
-      >Assignment 2</a
-    >
-    <a href="https://a2--subtle-centaur-640973.netlify.app/labs/a2/index.html"
-      >Lab 2</a
-    >
-    <a href="">Assignment 3</a>
     <div id="root"></div>
 
     <!--
