added links to assignment 3

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
     <a href="https://a2--subtle-centaur-640973.netlify.app/labs/a2/index.html"
       >Lab 2</a
     >
-    <a href="">Assignment 3</a>
+    <a href="https://a3--subtle-centaur-640973.netlify.app/#/Kanbas/Dashboard"
+      >Assignment 3</a
+    >
+    <a href="https://a3--subtle-centaur-640973.netlify.app/#/Labs">Lab 3</a>
     <div id="root"></div>
 
     <!--
