added assignment 4 links

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
       >Assignment 3</a
     >
     <a href="https://a3--subtle-centaur-640973.netlify.app/#/Labs">Lab 3</a>
+    <a href="https://a4--subtle-centaur-640973.netlify.app/#/Kanbas/Dashboard"
+      >Assignment 4</a
+    >
+    <a href="https://a4--subtle-centaur-640973.netlify.app/#/Labs">Lab 4</a>
     <div id="root"></div>
 
     <!--
