added homework links

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,10 @@
       >Assignment 4</a
     >
     <a href="https://a4--subtle-centaur-640973.netlify.app/#/Labs">Lab 4</a>
+    <a href="https://a5--subtle-centaur-640973.netlify.app/#/Kanbas/Dashboard"
+      >Assignment 5</a
+    >
+    <a href="https://a5--subtle-centaur-640973.netlify.app/#/Labs">Lab 5</a>
     <div id="root"></div>
 
     <!--
