added assignment 6 link

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
       >Assignment 5</a
     >
     <a href="https://a5--subtle-centaur-640973.netlify.app/#/Labs">Lab 5</a>
+    <a href="https://a6--subtle-centaur-640973.netlify.app/#/Kanbas/Dashboard"
+      >Assignment 6</a
+    >
     <div id="root"></div>
 
     <!--
